--- a/src/styles/components/Button.scss
+++ b/src/styles/components/Button.scss
@@ -1,8 +1,14 @@
 .btn {
-  @apply bg-blue-500 text-white px-4 py-2 rounded;
-  font-weight: bold;
+  @apply rounded-xl font-semibold cursor-pointer border  text-center select-none inline-flex items-center justify-center;
+  @apply transition-all duration-150 ease-in-out;
+  @apply text-black;
 
   &:hover {
-    @apply bg-blue-600;
+    @apply hover:bg-gray-300;
+  }
+
+  &:disabled,
+  &[disabled] {
+    @apply bg-gray-200 text-gray-400 border-gray-300 cursor-not-allowed;
   }
 }
