feat: header 영역 추가

--- a/src/styles/components/Button.scss
+++ b/src/styles/components/Button.scss
@@ -1,5 +1,5 @@
 .btn {
-  @apply rounded-xl font-semibold cursor-pointer border  text-center select-none inline-flex items-center justify-center;
+  @apply rounded-xl font-semibold cursor-pointer border border-black text-center select-none inline-flex items-center justify-center;
   @apply transition-all duration-150 ease-in-out;
   @apply text-black;
 
