--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,3 +7,11 @@ $primary-color: #4f46e5;
 body {
   font-family: 'Pretendard', sans-serif;
 }
+
+.rbc-day-slot .rbc-events-container {
+  margin-right: 0 !important;
+}
+
+.rbc-day-slot .rbc-events-container {
+  margin-right: 0px;
+}
