fix: 팝업 datepicker 수정

--- a/src/styles/components/Modal.scss
+++ b/src/styles/components/Modal.scss
@@ -4,6 +4,14 @@
 
 .modal-content {
   @apply bg-white p-6 rounded-lg shadow-xl max-w-md w-full mx-4;
+}
+
+.date-picker-container {
+  @apply relative;
+}
+
+.calendar-popup {
+  @apply absolute left-0 top-[calc(100%+4px)] bg-white rounded-lg shadow-xl z-50 border p-2;
 
   @media (max-width: 640px) {
     @apply p-4 mx-3;
