--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,7 @@
 
 body {
   font-family: 'Pretendard', sans-serif;
+  overflow: hidden;
 }
 
 .rbc-day-slot .rbc-events-container {
@@ -13,4 +14,12 @@ body {
 
 .rbc-day-slot .rbc-events-container {
   margin-right: 0px;
+}
+
+.rbc-time-header-cell {
+  height: 100px;
+}
+
+.rbc-time-slot {
+  text-align: left;
 }
